# job-app

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: job_search.py  utils.py
src/job_app/: job_search.py  models.py  utils.py
